--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     ]
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.3",
     "@types/react": "^19.1.0",
     "@types/react-dom": "^19.1.1",
     "@vitejs/plugin-react": "^4.3.4",
