--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "firebase": "^11.6.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-firebase-hooks": "^5.1.1",
     "react-router-dom": "^6.22.3"
   },
   "scripts": {
