--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-firebase-hooks": "^5.1.1",
-    "react-router-dom": "^6.22.3"
+    "react-router-dom": "^6.22.3",
+    "react-zoom-pan-pinch": "^3.7.0"
   },
   "scripts": {
     "dev": "vite",
